chore - fix warnings