@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2022 Marcel Baumann
+ * Copyright 2006-2024 Marcel Baumann
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of
  * the License at
@@ -8,6 +8,7 @@
  *
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  * OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+ *
  */
 
 package net.tangly.dev.model;
@@ -33,9 +34,9 @@ class CommitGitTest {
         assertThat(item).isNotNull();
         assertThat(item.items().size()).isEqualTo(2);
 
-        assertThat(item.items().get(0).addedLines()).isEqualTo(127);
-        assertThat(item.items().get(0).removedLines()).isEqualTo(11);
-        assertThat(item.items().get(0).commit()).isEqualTo(item);
+        assertThat(item.items().getFirst().addedLines()).isEqualTo(127);
+        assertThat(item.items().getFirst().removedLines()).isEqualTo(11);
+        assertThat(item.items().getFirst().commit()).isEqualTo(item);
 
         assertThat(item.items().get(1).addedLines()).isEqualTo(100);
         assertThat(item.items().get(1).removedLines()).isEqualTo(200);
