@@ -1,5 +1,5 @@
 /*
- * Copyright 2006-2022 Marcel Baumann
+ * Copyright 2006-2024 Marcel Baumann
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of
  * the License at
@@ -8,6 +8,7 @@
  *
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  * OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
+ *
  */
 
 package net.tangly.erp.products.ui;
@@ -52,7 +53,7 @@ public class CmdCreateEffort implements Cmd {
         effort.date(LocalDate.now());
         List<String> contractIds = assignment.product().contractIds();
         if (contractIds.size() == 1) {
-            effort.contractId(contractIds.get(0));
+            effort.contractId(contractIds.getFirst());
         }
     }
 
@@ -64,7 +65,7 @@ public class CmdCreateEffort implements Cmd {
                 binder.writeBean(effort);
                 domain.realm().efforts().update(effort);
             } catch (ValidationException validationException) {
-                logger.atError().log("Validation error", e);
+                logger.atError().log("Validation error {}", e);
             }
             close();
         });
